Dev/CS/Mascaret/Mascaret/obj/Debug/FipaSLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Florian\Documents\Mascaret\Dev\CS\Mascaret\Mascaret\BEHAVE\FipaSL.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace Mascaret {

using System;
using System.Collections;
using System.Collections.Generic;

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class FipaSLParser : Parser {
	public const int
		T__4=1, T__3=2, T__2=3, T__1=4, T__0=5, DIGIT=6, ID=7, WS=8, LPAREN=9, 
		RPAREN=10, COLON=11;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'done'", "'feasible'", "'action'", "'started'", "'.'", "DIGIT", 
		"ID", "WS", "'('", "')'", "':'"
	};
	public const int
		RULE_content = 0, RULE_contentexpression = 1, RULE_proposition = 2, RULE_wff = 3, 
		RULE_actionop = 4, RULE_actionexpression = 5, RULE_functionalterm = 6, 
		RULE_parameter = 7, RULE_parametername = 8, RULE_parametervalue = 9, RULE_term = 10, 
		RULE_constant = 11, RULE_numericalconstant = 12, RULE_agent = 13, RULE_functionsymbol = 14, 
		RULE_integer = 15, RULE_float = 16;
	public static readonly string[] ruleNames = {
		"content", "contentexpression", "proposition", "wff", "actionop", "actionexpression", 
		"functionalterm", "parameter", "parametername", "parametervalue", "term", 
		"constant", "numericalconstant", "agent", "functionsymbol", "integer", 
		"float"
	};

	public override string GrammarFileName { get { return "FipaSL.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }



	    public bool isAction = false;
	    public bool done = false;
	    public bool started = false;

	    public string value = "";

	    public string performer = "";
	    public string entityName = "";
	    public string actionName = "";
	    public string variable = "";

	    public List<string> paramValue = new List<string>();
	    public List<string> paramName = new List<string>();

	    

	public FipaSLParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ContentContext : ParserRuleContext {
		public ITerminalNode LPAREN() { return GetToken(FipaSLParser.LPAREN, 0); }
		public ITerminalNode RPAREN() { return GetToken(FipaSLParser.RPAREN, 0); }
		public ContentexpressionContext contentexpression() {
			return GetRuleContext<ContentexpressionContext>(0);
		}
		public ContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_content; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterContent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitContent(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContentContext content() {
		ContentContext _localctx = new ContentContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_content);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34; Match(LPAREN);
			State = 35; contentexpression();
			State = 36; Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContentexpressionContext : ParserRuleContext {
		public ActionexpressionContext actionexpression() {
			return GetRuleContext<ActionexpressionContext>(0);
		}
		public PropositionContext proposition() {
			return GetRuleContext<PropositionContext>(0);
		}
		public ContentexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_contentexpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterContentexpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitContentexpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContentexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContentexpressionContext contentexpression() {
		ContentexpressionContext _localctx = new ContentexpressionContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_contentexpression);
		try {
			State = 40;
			switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 38; actionexpression();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 39; proposition();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropositionContext : ParserRuleContext {
		public WffContext wff() {
			return GetRuleContext<WffContext>(0);
		}
		public PropositionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterProposition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitProposition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropositionContext proposition() {
		PropositionContext _localctx = new PropositionContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_proposition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; wff();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WffContext : ParserRuleContext {
		public ActionexpressionContext actionexpression() {
			return GetRuleContext<ActionexpressionContext>(0);
		}
		public ITerminalNode LPAREN() { return GetToken(FipaSLParser.LPAREN, 0); }
		public ActionopContext actionop() {
			return GetRuleContext<ActionopContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(FipaSLParser.RPAREN, 0); }
		public WffContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_wff; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterWff(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitWff(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWff(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WffContext wff() {
		WffContext _localctx = new WffContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_wff);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44; Match(LPAREN);
			State = 45; actionop();
			State = 46; actionexpression();
			State = 47; Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionopContext : ParserRuleContext {
		public ActionopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterActionop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitActionop(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionopContext actionop() {
		ActionopContext _localctx = new ActionopContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_actionop);
		try {
			State = 54;
			switch (_input.La(1)) {
			case T__4:
				EnterOuterAlt(_localctx, 1);
				{
				State = 49; Match(T__4);
				done = true;
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 51; Match(T__3);
				}
				break;
			case T__1:
				EnterOuterAlt(_localctx, 3);
				{
				State = 52; Match(T__1);
				started = true;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionexpressionContext : ParserRuleContext {
		public AgentContext _agent;
		public ITerminalNode LPAREN() { return GetToken(FipaSLParser.LPAREN, 0); }
		public FunctionaltermContext functionalterm() {
			return GetRuleContext<FunctionaltermContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(FipaSLParser.RPAREN, 0); }
		public AgentContext agent() {
			return GetRuleContext<AgentContext>(0);
		}
		public ActionexpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionexpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterActionexpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitActionexpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionexpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionexpressionContext actionexpression() {
		ActionexpressionContext _localctx = new ActionexpressionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_actionexpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; Match(LPAREN);
			State = 57; Match(T__2);
			isAction = true;
			State = 59; _localctx._agent = agent();
			performer = (_localctx._agent!=null?_input.GetText(_localctx._agent.start,_localctx._agent.stop):null);
			State = 61; functionalterm();
			State = 62; Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionaltermContext : ParserRuleContext {
		public FunctionsymbolContext _functionsymbol;
		public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		public ITerminalNode LPAREN() { return GetToken(FipaSLParser.LPAREN, 0); }
		public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		public ITerminalNode RPAREN() { return GetToken(FipaSLParser.RPAREN, 0); }
		public FunctionsymbolContext functionsymbol() {
			return GetRuleContext<FunctionsymbolContext>(0);
		}
		public FunctionaltermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionalterm; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterFunctionalterm(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitFunctionalterm(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionalterm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionaltermContext functionalterm() {
		FunctionaltermContext _localctx = new FunctionaltermContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_functionalterm);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64; Match(LPAREN);
			State = 65; _localctx._functionsymbol = functionsymbol();
			actionName = (_localctx._functionsymbol!=null?_input.GetText(_localctx._functionsymbol.start,_localctx._functionsymbol.stop):null);
			State = 70;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==COLON) {
				{
				{
				State = 67; parameter();
				}
				}
				State = 72;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 73; Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		public ParameternameContext parametername() {
			return GetRuleContext<ParameternameContext>(0);
		}
		public ParametervalueContext parametervalue() {
			return GetRuleContext<ParametervalueContext>(0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterParameter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitParameter(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_parameter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; parametername();
			State = 76; parametervalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameternameContext : ParserRuleContext {
		public IToken _ID;
		public ITerminalNode ID() { return GetToken(FipaSLParser.ID, 0); }
		public ITerminalNode COLON() { return GetToken(FipaSLParser.COLON, 0); }
		public ParameternameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parametername; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterParametername(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitParametername(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParametername(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParameternameContext parametername() {
		ParameternameContext _localctx = new ParameternameContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_parametername);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; Match(COLON);
			State = 79; _localctx._ID = Match(ID);
			paramName.Add((_localctx._ID!=null?_localctx._ID.Text:null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParametervalueContext : ParserRuleContext {
		public TermContext _term;
		public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public ParametervalueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parametervalue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterParametervalue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitParametervalue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParametervalue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParametervalueContext parametervalue() {
		ParametervalueContext _localctx = new ParametervalueContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_parametervalue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; _localctx._term = term();
			paramValue.Add((_localctx._term!=null?_input.GetText(_localctx._term.start,_localctx._term.stop):null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermContext : ParserRuleContext {
		public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		public TermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterTerm(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitTerm(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermContext term() {
		TermContext _localctx = new TermContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_term);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FipaSLParser.ID, 0); }
		public NumericalconstantContext numericalconstant() {
			return GetRuleContext<NumericalconstantContext>(0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constant; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterConstant(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitConstant(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstant(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantContext constant() {
		ConstantContext _localctx = new ConstantContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_constant);
		try {
			State = 89;
			switch (_input.La(1)) {
			case DIGIT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87; numericalconstant();
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 2);
				{
				State = 88; Match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumericalconstantContext : ParserRuleContext {
		public FloatContext @float() {
			return GetRuleContext<FloatContext>(0);
		}
		public IntegerContext integer() {
			return GetRuleContext<IntegerContext>(0);
		}
		public NumericalconstantContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numericalconstant; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterNumericalconstant(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitNumericalconstant(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumericalconstant(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumericalconstantContext numericalconstant() {
		NumericalconstantContext _localctx = new NumericalconstantContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_numericalconstant);
		try {
			State = 93;
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 91; integer();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 92; @float();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AgentContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FipaSLParser.ID, 0); }
		public AgentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_agent; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterAgent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitAgent(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAgent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AgentContext agent() {
		AgentContext _localctx = new AgentContext(_ctx, State);
		EnterRule(_localctx, 26, RULE_agent);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionsymbolContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FipaSLParser.ID, 0); }
		public FunctionsymbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionsymbol; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterFunctionsymbol(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitFunctionsymbol(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionsymbol(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionsymbolContext functionsymbol() {
		FunctionsymbolContext _localctx = new FunctionsymbolContext(_ctx, State);
		EnterRule(_localctx, 28, RULE_functionsymbol);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntegerContext : ParserRuleContext {
		public ITerminalNode DIGIT(int i) {
			return GetToken(FipaSLParser.DIGIT, i);
		}
		public ITerminalNode[] DIGIT() { return GetTokens(FipaSLParser.DIGIT); }
		public IntegerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_integer; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterInteger(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitInteger(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInteger(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntegerContext integer() {
		IntegerContext _localctx = new IntegerContext(_ctx, State);
		EnterRule(_localctx, 30, RULE_integer);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 99; Match(DIGIT);
				}
				}
				State = 102;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==DIGIT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FloatContext : ParserRuleContext {
		public ITerminalNode DIGIT(int i) {
			return GetToken(FipaSLParser.DIGIT, i);
		}
		public ITerminalNode[] DIGIT() { return GetTokens(FipaSLParser.DIGIT); }
		public FloatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_float; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.EnterFloat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFipaSLListener typedListener = listener as IFipaSLListener;
			if (typedListener != null) typedListener.ExitFloat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFipaSLVisitor<TResult> typedVisitor = visitor as IFipaSLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFloat(this);
			else return visitor.VisitChildren(this);
		}
	}
